@@ -119,7 +119,6 @@ class TTemplateControl extends TCompositeControl
 	{
 		Prado::trace("Loading template ".get_class($this),'System.Web.UI.TTemplateControl');
 		$template=$this->getService()->getTemplateManager()->getTemplateByClassName(get_class($this));
-		self::$_template[get_class($this)]=$template;
 		return $template;
 	}
 
