@@ -16,10 +16,14 @@ BUG: Ticket#264 - Typos in some exception throw statements (Knut)
 BUG: Ticket#268 - THttpResponse.redirect() may fail for some browsers (Qiang)
 BUG: TDataGrid may complain getting ItemType on a non-object if the grid is not data-bound (Qiang)
 BUG: TCheckBox.Value should be converted to string (Qiang)
+CHG: Ticket#206 - TBaseValidator.OnValidate is raised only when the validator is visible (Qiang)
 ENH: Ticket#220 - TClientScripts method to import custom javascript files (Wei)
 ENH: Ticket#225 - TRadioButton::getRadioButtonsInGroup() added (Wei)
 ENH: Ticket#223 - Use TRequiredFieldValidator for TRadioButtons with GroupName property (Wei)
 ENH: Ticket#277 - Added TControl.CustomData property (Qiang)
+ENH: Ticket#287 - TControl::broadcastEvent() may raise events now (Qiang)
+ENH: Ticket#292 - Added THttpRequest::parseUrl() so that it is easier to be extended (Qiang)
+ENH: Better URL 'Path' format (Qiang)
 NEW: Added TStyleSheet (Wei)
 
 Version 3.0.2 July 2, 2006
